--- a/clash.yaml
+++ b/clash.yaml
@@ -83,13 +83,13 @@ proxy-groups:
   - { name: "🔰 选择节点", type: select, proxies: [DIRECT, 免费-日本节点,✈️国外站点,⚓国外站点非日本IP,专线,中国节点,美国节点,新加坡节点,香港节点,台湾节点]}
   - { name: "✈️国外站点", type: fallback, interval: 60, tolerance: 500,timeout: 3000, url: "http://www.gstatic.com/generate_204", proxies: [专线,免费-日本节点,⚓国外站点非日本IP] }
   - { name: "⚓国外站点非日本IP", type: fallback, interval: 60, tolerance: 500,timeout: 3000, url: "http://www.gstatic.com/generate_204",proxies: [新加坡节点,台湾节点,专线,中国节点,美国节点,香港节点] }
-  - { name: 专线, <<: *fallback, filter: "专线", icon: https://down.nigx.cn/raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png}
+  - { name: 专线, <<: *fallback, filter: "专线|pgkj666G|wxgqlfx", icon: https://down.nigx.cn/raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png}
   - { name: "免费-日本节点", type: fallback, interval: 60, tolerance: 500,timeout: 3000, url: "http://www.gstatic.com/generate_204",proxies: [🇯🇵 免费-日本1-Ver.6, 🇯🇵 免费-日本2-Ver.7, 🇯🇵 免费-日本3-Ver.6, 🇯🇵 免费-日本4-Ver.7, 🇯🇵 免费-日本5-Ver.8, 🇯🇵 免费-日本6-Ver.7, 🇯🇵 免费-日本7-Ver.1,🇯🇵 免费-日本1-qq, 🇯🇵 免费-日本2-qq, 🇯🇵 免费-日本3-qq, 🇯🇵 免费-日本4-qq, 🇯🇵 免费-日本5-qq, 🇯🇵 免费-日本6-qq, 🇯🇵 免费-日本7-qq] }
-  - { name: 新加坡节点, <<: *fallback, filter: "🇸🇬|新加坡|狮|SG|Singapore", icon: https://down.nigx.cn/raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png}
-  - { name: 香港节点, <<: *fallback, filter: "香港|HK", icon: https://down.nigx.cn/raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png}
-  - { name: 台湾节点, <<: *fallback, filter: "台湾", icon: https://down.nigx.cn/raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png}
-  - { name: 美国节点, <<: *fallback, filter: "美国", icon: https://down.nigx.cn/raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png}
-  - { name: 中国节点, <<: *fallback, filter: "中国", icon: https://down.nigx.cn/raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png}
+  - { name: 新加坡节点, <<: *fallback, filter: "^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?!.*专线)", icon: https://down.nigx.cn/raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png}
+  - { name: 香港节点, <<: *fallback, filter: "^(?=.*(香港|HK))(?!.*专线)", icon: https://down.nigx.cn/raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png}
+  - { name: 台湾节点, <<: *fallback, filter: "^(?=.*(台湾))(?!.*专线)", icon: https://down.nigx.cn/raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png}
+  - { name: 美国节点, <<: *fallback, filter: "^(?=.*(美国))(?!.*专线)", icon: https://down.nigx.cn/raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png}
+  - { name: 中国节点, <<: *fallback, filter: "^(?=.*(中国))(?!.*专线)", icon: https://down.nigx.cn/raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png}
 
   - name: 🇨🇳 国内网站
     type: select
@@ -103,6 +103,9 @@ proxy-groups:
       - DIRECT
       - 🔰 选择节点
 rules:
+ - DOMAIN-SUFFIX,hongimg.com,中国节点
+ - DOMAIN-SUFFIX,cosblay.com,中国节点
+ - DOMAIN-SUFFIX,trendszine.com,中国节点
  - DOMAIN-SUFFIX,cool18.com,✈️国外站点
  - DOMAIN-SUFFIX,knvod.com,DIRECT
  - DOMAIN-SUFFIX,sw20250101.click,✈️国外站点
